[tool.poetry]
name = "fastapi-tdd"
version = "0.1.0"
description = ""
authors = ["giuliowaitforitdavide <giulio@fiscozen.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
